[package]
name = "tofu"
version = "0.1.0"
authors = ["Yufeng Wang <yufengwang05@gmail.com>"]
edition = "2021"

[workspace]
members = [
  "tflang",
  "tfmito",
  "tfproc",
  "tfrepl",
]

[dependencies]
clap = { version = "3.1", features = ["derive"] }
tfproc = { path = "tfproc" }
tfrepl = { path = "tfrepl" }
