[package]
name = "table"
version = "0.1.0"
authors = ["Yufeng Wang <yufengwang05@gmail.com>"]
edition = "2021"

[workspace]
members = [
  "tblang",
  "tblift",
  "tbmito",
  "tbproc",
  "tbrepl",
]

[dependencies]
clap = { version = "3.1", features = ["derive"] }
tblift = { path = "tblift" }
tbrepl = { path = "tbrepl" }

[dev-dependencies]
tbproc = { path = "tbproc" }
